# xtwsd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  building.txt  common_flags.sh
dependencies/fifo_map/: CMakeLists.txt
dependencies/nlohmann_json/: CMakeLists.txt
dependencies/served/: CMakeLists.txt
src/: _libxtide.h  jschema.cpp  jschema.h  json_fifo.h  jsonxt.cpp  jsonxt.h  jutil.hpp  main.cpp  nearstations.cpp  nearstations.h  stdcapture.cpp  stdcapture.h  xtutil.cpp  xtutil.h
src/util/: bahamas.txt  caribbean.txt  httpclient.cpp  httpclient.h  nos2xt.cpp  root_certificates.hpp
tests/: stationdata.json  testHarmonicsAdd.cpp
